# nourrobot

./: CMakeLists.txt  LICENSE  README.md  map.pgm  map.yaml  package.xml
Teensy/firmware/: 58-nour.rules  firmware.ino  platformio.ini
ai_detection/: CMakeLists.txt  package.xml
ai_detection/launch/: detection.launch
ai_detection/models/: emotion_deploy.prototxt  emotion_model.onnx
ai_detection/msg/: DetectionResult.msg
ai_detection/src/: camera_detection.py
darknet_ros/darknet_ros/: CMakeLists.txt
imu_calib/: CMakeLists.txt  README.md  package.xml
imu_calib/src/: apply_calib.cpp  do_calib.cpp
launch/: bringup.launch  minimal.launch  navigate.launch
launch/include/: laser.launch
maps/: .yaml  map.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml
maps/ds/: map.pgm
maps/old/: map.pgm  map.yaml
noor_bringup/: CMakeLists.txt  package.xml
noor_bringup/include/: Velocities.h  nour_base.h
noor_bringup/launch/: noor_bringup.launch
noor_bringup/param/: ekf_localization.yaml
noor_bringup/src/: imu_publisher.cpp  nour_base.cpp  nour_base_node.cpp
noor_control/: CMakeLists.txt  package.xml
noor_control/launch/: noor_manager.launch
noor_control/scripts/: noor_control_manager.py
noor_description/: CMakeLists.txt  package.xml
noor_gmapping/: CMakeLists.txt  package.xml
noor_navigation/: CMakeLists.txt  package.xml
noor_robot/: CMakeLists.txt  package.xml
nour_msgs/: CMakeLists.txt  package.xml
roscontrol/: CMakeLists.txt  package.xml
rplidar/: CMakeLists.txt  package.xml
urdf/: nourrobot.urdf
(+63 files in other folders)
